# MLSys-FlashLinfer-Contest

./: .gitignore  AGENTS.md  CLAUDE.md  MODAL_MACOS_RUNBOOK.md  README.md  benchmark_baseline.tsv  benchmark_cuda.tsv  config.toml  experiment.md  gdn_decode_kernel7_experiments_2026-03-25.md  main.py  pyproject.toml  requirements.txt
.claude/: auto-commit-on-stop.sh
.claude/skills/: b200-remote-access.md  optimize.md
.devcontainer/: devcontainer.json
bash_scripts/: create_mini.sh  run_local.sh  run_local_stats.sh  run_ncu.sh
definitions/dsa_paged/: dsa_sparse_attention_h16_ckv512_kpe64_topk2048_ps64.md  dsa_topk_indexer_fp8_h64_d128_topk2048_ps64.md
definitions/gdn/: gdn_decode_qk4_v8_d128_k_last.md  gdn_prefill_qk4_v8_d128_k_last.md
definitions/moe/: moe_fp8_block_scale_ds_routing_topk8_ng8_kg4_e32_h7168_i2048.md
docker/: Dockerfile
gdn_decode/: config.toml
gdn_decode/bash_scripts/: create_mini.sh
gdn_decode/scripts/: extract_definitions.py  extract_solutions.py  run_modal.py  run_ncu.py
gdn_prefill/: README.md  config.toml  optimization_analysis.md  optimization_log.md
gdn_prefill/bash_scripts/: run_gdn_experiment.sh
gdn_prefill/benchmarks/: baseline_20260412.tsv  benchmark_20260409_1500_tile_format_xor_swizzle.tsv  (+26 more)
other/tvm_ffi_example/: CMakeLists.txt  README.md  load_scale.py  scale_kernel.cu  tvm_ffi_utils.h
scripts/: debug_gdn_prefill_reference.py  extract_definitions.py  extract_workloads.py  pack_solution.py  run_local.py  run_local_fast.py  run_local_fast_local.py  run_ncu.py  run_ncu_local_mini.py  run_ncu_ptx_tmp.py
(+202 files in other folders)
