[project]
name = "mlsys-flashlinfer-contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flashinfer-bench",
    "huggingface-hub>=1.3.5",
    "modal>=1.3.1",
]

[tool.uv.sources]
flashinfer-bench = { git = "https://github.com/flashinfer-ai/flashinfer-bench.git" }
